Expose trusted filesystem handle SPI to provider JARs